# blog-fasthtml

./: .gitignore  README.md  generate_site.py  pyproject.toml
.github/workflows/: test-site-generation.yml
docs/: about.html  index.html
