[project]
name = "blog-fasthtml"
version = "0.1.0"
description = ""
authors = [
    {name = "David Hinrichs", email = "dvd.hnrchs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
